crates/review-buddy/tests/snapshots/dashboard__checks_tab_with_noise_expanded.snap
---
source: crates/review-buddy/tests/dashboard.rs
expression: text(&buffer)
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-buddy#214 ──────────────────────────────────────────────────── ⟩ ╮
│▌ ● All               7 ││  Waiting on you · 2                          ││ Add a menu bar and keyboard-driven menus                                           │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driven me… 2h ││ ada wants ada/menus → main                                                         │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested││ +32 −1 · 3 files · opened 3d ago                                                   │
│    github.com          ││  ● Raise muted text contrast in the ligh… 5h ││                                                                                    │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                           │
│    github.com          ││                                              ││                                                                                    │
│  ● platform          2 ││  Worth a look · 2                            ││  Overview   Files 3   Checks 6   Conversation 3                                    │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups          7h ││ ────────────────────────────────────────────────────────────────────────────────── │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned     ││ ● fmt  passing · 18s · required                                                    │
│    gitlab.com          ││  ● Tidy zsh startup                       1d ││ ● clippy  passing · 1m 34s · required                                              │
│                        ││  GH dotfiles#31 · smorris · yours            ││ ◐ test (linux)  running · required                                                 │
│  Show  s to change     ││                                              ││ ↷ test (windows)  skipped                                                          │
│  [x] reviewing         ││  Can wait · 1                                ││ ○ coverage  neutral · 2m 11s · optional                                            │
│  [x] assigned          ││  · Clarify the install steps              3d ││ ⊘ bench  cancelled · 40s · optional                                                │
│  [x] authored          ││  GL notes!12 · kai · approved by you         ││                                                                                    │
│  [ ] drafts            ││                                              ││                                                                                    │
│  [ ] noise             ││  ▾ Noise · 2 bot updates · ⏎ to collapse     ││                                                                                    │
│                        ││  ● Update tokio to 1.47                   9h ││                                                                                    │
│                        ││  GL flow!1190 · project_42_bot_a1b2c3 · bot …││                                                                                    │
│                        ││  ● Update ratatui to 0.30                 1d ││                                                                                    │
│                        ││  GH review-buddy#201 · renovate[bot] · bot u…││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││  ── That's everything.                       ││                                                                                    │
│                        ││  7 in this view.                             ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││                                                                                    │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
