crates/review-buddy/tests/snapshots/dashboard__dashboard_130x40_keeps_the_sources_pane.snap
---
source: crates/review-buddy/tests/dashboard.rs
assertion_line: 120
expression: text(&buffer)
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                         Liminal HQ
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ liminal-hq/review-buddy#214 ─────────────────────────╮
│▌ ● All               7 ││  Waiting on you · 2                          ││ Add a menu bar and keyboard-driven menus             │
│    every source        ││▌ ◐ Add a menu bar and keyboard-driven me… 2h ││ ada wants ada/menus → main                           │
│  ● liminal-hq        3 ││▌ GH review-buddy#214 · ada · review requested││ +32 −1 · 3 files · opened 3d ago                     │
│    github.com          ││  ● Raise muted text contrast in the ligh… 5h ││                                                      │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff      │
│    github.com          ││                                              ││                                                      │
│  ● platform          2 ││  Worth a look · 2                            ││  Overview   Files 3   Checks 6   Conversation 3      │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups          7h ││ ──────────────────────────────────────────────────── │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned     ││ Adds a menu bar along the top and a Menu type that   │
│    gitlab.com          ││  ● Tidy zsh startup                       1d ││ tracks the selected item.                            │
│                        ││  GH dotfiles#31 · smorris · yours            ││                                                      │
│                        ││                                              ││ • Menu::select_next and Menu::select_prev move the   │
│                        ││  Can wait · 1                                ││ highlight                                            │
│                        ││  · Clarify the install steps              3d ││ • Menu::activate returns the action for the          │
│                        ││  GL notes!12 · kai · approved by you         ││ highlighted item                                     │
│                        ││                                              ││ • The bar itself is a plain Line, so it picks up the │
│                        ││  ▸ Noise · 2 bot updates · ⏎ to expand       ││ …                                                    │
│                        ││                                              ││                                                      │
│                        ││  ── That's everything.                       ││ Reviewers                                            │
│                        ││  7 in this view.                             ││ ◌ smorris requested                                  │
│                        ││                                              ││ ✎ jo commented                                       │
│                        ││                                              ││                                                      │
│                        ││                                              ││ Checks                                               │
│                        ││                                              ││ ● 2 passing  ◐ 1 running                             │
│                        ││                                              ││ ○ 1 neutral  ↷ 1 skipped  ⊘ 1 cancelled              │
│                        ││                                              ││                                                      │
│                        ││                                              ││ Latest comment                                       │
│                        ││                                              ││ jo · 5h ago · menubar.rs:7                           │
│                        ││                                              ││ These three lines could be one join. Is the          │
│                        ││                                              ││ intermediate Vec doing anything for us?              │
│                        ││                                              ││                                                      │
│                        ││                                              ││ Your review  not started                             │
│                        ││                                              ││                                                      │
│                        ││                                              ││                                                      │
│                        ││                                              ││                                                      │
│                        ││                                              ││                                                      │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰──────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  ? help  T theme  q quit
